kubernetes/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-internal-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: peter6866/thebearbazaar-backend:latest
      imagePullSecrets:
        - name: regcred
