kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-internal-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: frontend
