kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'thebearbazaar.com') {
        return 301 https://www.thebearbazaar.com$request_uri;
      }
spec:
  tls:
    - hosts:
        - thebearbazaar.com
        - www.thebearbazaar.com
      secretName: thebearbazaar-tls
  rules:
    - host: www.thebearbazaar.com
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: backend-internal-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-internal-service
                port:
                  number: 80
